--- a/BASES/tsconfig.json
+++ b/BASES/tsconfig.json
@@ -107,6 +107,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "classes"
+    "namespaces" //modifico segun uso 
   ]
 }
